--- a/두두두두두두둥/week2/style.css
+++ b/두두두두두두둥/week2/style.css
@@ -1,11 +1,54 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #272627;
 }
 
 canvas {
   width: 800px;
   height: 800px;
-  border: 2px solid black;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 30px white;
+}
+
+.optionContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+  gap: 20px;
+}
+
+/* optioncontainer children */
+#lineWidth,
+#color,
+#eraser,
+#clear {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+button {
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  padding: 12px 40px;
+  border-radius: 40px;
+  font-size: 1.05em;
+  background: #2f2f2f;
+  color: #bbb;
+  letter-spacing: 0.15em;
+  text-decoration: none;
+  text-transform: uppercase;
+  user-select: none;
+  border: none;
+  transition: 0.5s;
+}
+
+button:hover {
+  color: #ffff;
 }
