--- a/두두두두두두둥/week2/style.css
+++ b/두두두두두두둥/week2/style.css
@@ -47,8 +47,29 @@ button {
   user-select: none;
   border: none;
   transition: 0.5s;
+  overflow: hidden;
 }
 
 button:hover {
   color: #ffff;
+}
+
+button span {
+  position: absolute;
+  border: 2px solid #fff;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  border-radius: 50%;
+  animation: animate 2s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  100% {
+    width: 350px;
+    height: 350px;
+  }
 }
