--- a/두두두두두두둥/week3/style.css
+++ b/두두두두두두둥/week3/style.css
@@ -34,6 +34,12 @@ canvas {
 }
 
 button {
+  width: 333px;
+  height: 50px;
+}
+
+button,
+label {
   position: relative;
   font-family: "Poppins", sans-serif;
   padding: 12px 40px;
@@ -61,6 +67,18 @@ button span {
   pointer-events: none;
   border-radius: 50%;
   animation: animate 2s linear infinite;
+}
+label[for="text"] {
+  display: flex;
+  width: 260px;
+  height: 50px;
+}
+
+label input[type="text"] {
+  width: 240px;
+  background: none;
+  border: none;
+  color: #bbb;
 }
 
 @keyframes animate {
