--- a/주선/week2/style.css
+++ b/주선/week2/style.css
@@ -2,18 +2,30 @@ html {
   height: 100vh;
   width: 100vw;
 }
+.hidden {
+  display: hidden;
+}
 h1 {
   color: black;
+  font-size: 60px;
   text-align: center;
   background: linear-gradient(to right, #f00, #00f);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: lightgoldenrodyellow;
+  margin-top: 100px;
+}
+.notice {
+  display: inline;
+  text-align: center;
+  text-shadow: 2px 2px 2px gray;
 }
 .color-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 90vh;
+  height: 70vh;
   width: 100vw;
 }
 .color-box {
