--- a/주선/week3/style.css
+++ b/주선/week3/style.css
@@ -53,6 +53,22 @@ body {
   flex-direction: column;
   gap: 20px;
 }
+.stamp {
+  all: unset;
+  padding: 10px;
+  background-color: royalblue;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
+  transition: opacity linear 0.1s;
+}
+
+#stamp {
+  all: unset;
+  padding-top: 18px;
+  background-color: royalblue;
+  color: white;
+  font-weight: 500;
+}
 
 button,
 label {
@@ -80,7 +96,8 @@ label {
 }
 
 button:hover,
-label:hover {
+label:hover,
+.haert:hover {
   opacity: 0.85;
 }
 input#file {
@@ -116,4 +133,31 @@ input#text {
   cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🩸</text></svg>")
       0 5,
     auto;
+}
+
+.stamp {
+  display: flex;
+  justify-content: space-between;
+  border: black 1px;
+  gap: 10px;
+}
+.rect,
+.circle {
+  width: 40px;
+  height: 40px;
+  margin-top: 7px;
+  cursor: pointer;
+  background-color: black;
+}
+
+.star,
+.heart {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 50px;
+}
+.circle {
+  border-radius: 50%;
 }
