--- a/개발자멍멍쌤/week3/style.css
+++ b/개발자멍멍쌤/week3/style.css
@@ -24,6 +24,7 @@ body {
     align-items: flex-start;
     background-color: #f6f9fc;
     padding:5px;
+    line-height:60%;
     /*font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
     font-family: 'Jua', sans-serif;
 }
@@ -39,16 +40,45 @@ div {
 
 label {
     all:unset;
-    width:100px;
-    padding:10px;
+    width:70px;
+    height:20px;
+    padding:5px;
     background-color:royalblue;
     color:white;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 14px;
     cursor: pointer;
     border-radius: 10px;
     transition: opacity linear .1s;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+label.hour {
+    width:55px;
+    height:20px;
+    font-size: 14px;
+    text-align: center;
+    line-height:20px ;
+    background-color:rgb(198, 88, 248);    
+}
+
+label.minute {
+    width:55px;
+    height:20px;
+    font-size: 14px;
+    text-align: center;
+    line-height:20px ;
+    background-color:rgb(198, 88, 248);    
+}
+
+label.updown {
+    width:80px;
+    height:20px;
+    font-size: 14px;
+    text-align: center;
+    line-height:20px ;
+    color:black;
+    background-color:rgb(95, 248, 6);    
 }
 
 label:hover {
@@ -61,6 +91,7 @@ label:hover {
     text-align: center;
     justify-content : center;    
     width: 600px;
+    height: 90px;
     border: 7px solid rgb(255, 252, 252);
     padding: 8px;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.16), 0 2px 10px 0 
@@ -71,9 +102,11 @@ label:hover {
     font-family: '굴림체', monospace, sans-serif;
     font-size: 68pt;
     font-weight: 200;
+    line-height:100%;
 }
 .ampm {
     font-family: '굴림체', monospace, sans-serif;
     font-size: 40pt;
     font-weight: 200;
+    line-height:100%;
 }
