--- a/죠이/week3/style.css
+++ b/죠이/week3/style.css
@@ -1,16 +1,148 @@
+@import "reset.css";
+
+body {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: #f6f9fc;
+  padding: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 canvas {
   width: 800px;
   height: 800px;
-  border: 5px solid black;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 body {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: #f6f9fc;
+  padding: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.color-options {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
 .color-option {
   width: 50px;
   height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid white;
+  transition: transform ease-in-out 0.1s;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+.color-option:hover {
+  transform: scale(1.2);
+}
+input#color {
+  background-color: white;
+}
+
+button,
+label {
+  all: unset;
+  padding: 10px 0px;
+  text-align: center;
+  background-color: royalblue;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: opacity linear 0.1s;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+button:hover {
+  opacity: 0.85;
+}
+
+input#file {
+  display: none;
+}
+
+input#text {
+  all: unset;
+  padding: 10px 0px;
+  border-radius: 10px;
+  font-weight: 500;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.timer {
+  background: -webkit-linear-gradient(left, skyBlue 50%, #eee 50%);
+  /* Foreground color, Background colour */
+  border-radius: 100%;
+  height: 100px;
+  /* Height and width */
+  position: relative;
+  width: 100px;
+  /* Height and width */
+  animation-name: time;
+  animation-duration: 30s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.mask {
+  border-radius: 100% 0 0 100% / 50% 0 0 50%;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 50%;
+
+  animation-name: mask;
+  animation-duration: 30s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  /* Animation time and number of steps (halved) */
+  -webkit-transform-origin: 100% 50%;
+}
+@-webkit-keyframes time {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes mask {
+  0% {
+    background: #eee;
+    /* Background colour */
+    -webkit-transform: rotate(0deg);
+  }
+  50% {
+    background: #eee;
+    /* Background colour */
+    -webkit-transform: rotate(-180deg);
+  }
+  50.01% {
+    background: skyBlue;
+    /* Foreground colour */
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    background: skyBlue;
+    /* Foreground colour */
+    -webkit-transform: rotate(-180deg);
+  }
 }
