--- a/개발자멍멍쌤/week3/style.css
+++ b/개발자멍멍쌤/week3/style.css
@@ -1,8 +1,8 @@
 @import "reset.css";
 
 canvas {
-    width:600px;
-    height:600px;
+    width:800px;
+    height:800px;
     background-color: #14fd4e;
     border: 7px solid rgb(255, 252, 252);
     padding: 8px;
@@ -10,23 +10,14 @@ canvas {
     rgba(0,0,0,0.12);
 }
 
-canvas#digitalclock2 {
-    width:600px;
-    height:90px;
-    background-color: #02020e;
-}
-
 body {
     display: flex;
     flex-direction: column;
-    gap:10px;
-    /*justify-content: space-between;*/
     align-items: flex-start;
     background-color: #f6f9fc;
-    padding:5px;
+    padding:10px;
     line-height:60%;
-    /*font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;*/
-    font-family: 'Jua', sans-serif;
+    font-family: '굴림체', sans-serif;
 }
 
 div {
@@ -40,13 +31,14 @@ div {
 
 label {
     all:unset;
-    width:70px;
-    height:20px;
+    margin: 0px 5px 0px 5px;
+    width:73px;
+    height:23px;
     padding:5px;
     background-color:royalblue;
     color:white;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 16px;
     cursor: pointer;
     border-radius: 10px;
     transition: opacity linear .1s;
@@ -56,7 +48,7 @@ label {
 label.hour {
     width:55px;
     height:20px;
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     line-height:20px ;
     background-color:rgb(198, 88, 248);    
@@ -65,17 +57,16 @@ label.hour {
 label.minute {
     width:55px;
     height:20px;
-    font-size: 14px;
+    font-size: 16px;
     text-align: center;
     line-height:20px ;
     background-color:rgb(198, 88, 248);    
 }
 
 label.updown {
-    width:80px;
+    width:100px;
     height:20px;
-    font-size: 14px;
-    text-align: center;
+    font-size: 16px;
     line-height:20px ;
     color:black;
     background-color:rgb(95, 248, 6);    
@@ -86,27 +77,35 @@ label:hover {
 }
 
 .digitalclock {
-    background: rgb(12, 12, 12);
+    background: #121212dd;
     color: #fff;
     text-align: center;
-    justify-content : center;    
-    width: 600px;
-    height: 90px;
+    justify-content : center;
+    word-break:break-all;
+    width: 510px;
+    height: 75px;
     border: 7px solid rgb(255, 252, 252);
     padding: 8px;
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.16), 0 2px 10px 0 
     rgba(0,0,0,0.12);
 }
 
-.hms {
-    font-family: '굴림체', monospace, sans-serif;
-    font-size: 68pt;
-    font-weight: 200;
-    line-height:100%;
-}
 .ampm {
     font-family: '굴림체', monospace, sans-serif;
-    font-size: 40pt;
-    font-weight: 200;
+    font-size: 30pt;
+    font-weight: 900;
+    line-height:130%;
+}
+.hms {
+    font-family: '굴림체', monospace, sans-serif;
+    font-size: 58pt;
+    font-weight: 900;
     line-height:100%;
+}
+
+.millisec {
+    font-family: '굴림체', monospace, sans-serif;
+    font-size: 20pt;
+    font-weight: 900;
+    line-height:430%;
 }
